# dvc-pipeline

./: dvc.yaml  pyproject.toml
data/clean/: events.csv
data/features/: events.csv
data/transformed/: events.csv
notebooks/: report.py
notebooks/__marimo__/session/: report.py.json
src/: clean.py  features.py  transform.py
