[project]
name = "dvc-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dylan Berry", email = "dylanjberry@icloud.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
dvc-pipeline = "dvc_pipeline:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
