[project]
name = "dvc-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dylan Berry", email = "dylanjberry@icloud.com" }
]
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.23.6",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
]

[project.scripts]
dvc-pipeline = "dvc_pipeline:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "dvc>=3.67.1",
]
